[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib-coderun"
version = "0.1.0"
description = "Sphinx directive that adds an interactive Run button to code files via a self-hosted codeapi instance"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Senthil Kumaran", email = "orsenthil@gmail.com" }
]
keywords = ["sphinx", "codeapi", "interactive", "code", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Documentation :: Sphinx",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.9"
dependencies = ["sphinx>=5.0"]

[project.urls]
Homepage = "https://github.com/uthcode/sphinxcontrib-coderun"
Issues = "https://github.com/uthcode/sphinxcontrib-coderun/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["sphinxcontrib*"]

[tool.setuptools.package-data]
"sphinxcontrib.coderun" = ["static/*"]
